<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/text_margin">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/alert_settings" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/switch_expiry_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expiry_date_alerts" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_notify_within"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:paddingStart="32dp"
        android:text="@string/alert_notify_within" />

    <RadioGroup
        android:id="@+id/radioGroup_lead_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="32dp">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_3_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_lead_days_3" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_7_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_lead_days_7" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_14_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_lead_days_14" />
    </RadioGroup>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/switch_low_stock_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/low_stock_alerts" />
</androidx.appcompat.widget.LinearLayoutCompat>
